--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -28,7 +28,7 @@ label {
 }
 
 input {
-  width: 100%;
+  width: 94%;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 3px;
@@ -37,15 +37,16 @@ input {
 
 button {
   width: 100%;
-  background-color: #007bff;
+  background-color: rgb(39, 39, 39);
   color: #fff;
   padding: 10px;
   border: none;
-  border-radius: 3px;
+  margin-top: 10px;
+  border-radius: 30px;
   font-size: 16px;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color:black;
 }
